# Serialization

./: .gitignore  CMakeLists.txt  README.md
include/: array.h  core.h  meta.h  object.h  primitive.h  root.h  serialization.h
src/: array.cpp  core.cpp  main.cpp  object.cpp  primitive.cpp
tests/: CMakeLists.txt  tests.cpp
